--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
                         <span class="w-3 h-3 bg-cyan-400 rounded-full animate-pulse"></span>
                         2. Project Vision
                     </h2>
-                    <p class="text-slate-500 text-sm italic">Describe your project goals or use a template above. Our AI handles the grammar and tech details.</p>
                 </div>
                 
                 <div class="space-y-6 flex-1 flex flex-col" id="readmeForm">
                     <div class="input-group flex-1 flex flex-col">
-                        <textarea id="pDesc" placeholder="Example: I'm building a book exchange platform for students where they can sell books and chat about prices..." 
+                        <textarea id="pDesc" placeholder="Describe your project here..." 
                         class="w-full flex-1 bg-slate-900/60 border border-slate-800 rounded-2xl p-6 focus:border-cyan-500 transition text-lg leading-relaxed resize-none text-white shadow-inner"></textarea>
                     </div>
 
