--- a/index.html
+++ b/index.html
@@ -181,16 +181,10 @@
             try {
 
                 // Change this line in your index.html:
-                const response = await fetch('https://readme-generator-loob.onrender.com/generate-readme', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ prompt: userInput })
-                });
-                const response = await fetch('http://localhost:3001/generate-readme', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ prompt: userInput })
-                });
+                onst response = await fetch('https://readme-generator-loob.onrender.com/generate-readme', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ prompt: userInput })
                 const data = await response.json();
                 if (data.markdown) {
                     editor.value = data.markdown;
